3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix get_split_ob not returning failure message (was through errmsg).
 common/object.c
 include/libproto.h
 server/apply.c c_object.c player.c plugins.c skills.c spell_effect.c
Ryo 2007-02-11

Remove errmsg use for dump_object and dump_arch. Merge dump_object and dump_object2.
 common/anim.c arch.c object.c
 crossedit/Attr.c
 include/libproto.h
 server/c_misc.c c_wiz.c server.c time.c
 test/unit/common/check_object.c
Ryo 2007-02-11

server/weather.c: Fix possible buffer overflows.
server/gods.c: Use correct format specifier in sprintf().
server/spell_util.c: Fix return statements with no value in non-void
   function.
server/time.c, include/libproto.h: Make log_time() static.
server/apply.c: Fix return statements with no value in non-void function.
common/living.c: Fix incorrect "extern" definition for "levels".
server/c_range.c: Fix possible buffer overflows.
server/server.c: Fix possible buffer overflows.
common/map.c: Fix possible buffer overflows; Reduce memory used by
   load_map_header().
common/readable: Improve performance by minimizing string copies.
server/c_object.c: Fix possible buffer overflows.
common/item.c: Fix possible buffer overflows; improve performance by
   minimizing string copies; fix bugs because of missing braces; make sure
   all strings are \0-terminated.
Andreas Kirschbaum 2007-02-10

Misc LOG fixes (mostly add missing newline), no functional change.
 common/anim.c arch.c holy.c image.c init.c [also fix missing init value] porting.c readable.c
  recipe.c region.c treasure.c
 server/init.c weather.c
Ryo 2007-02-10
