@@ -336,7 +336,7 @@ extern const char *add_refcount(const char *str);
 extern int query_refcount(const char *str);
 extern const char *find_string(const char *str);
 extern void free_string(const char *str);
-extern void ss_dump_statistics(void);
+extern void ss_dump_statistics(char* buf, int size);
 extern const char *ss_dump_table(int what);
 extern int buf_overflow(const char *buf1, const char *buf2, int bufsize);
 /* time.c */
